# hft-engine

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: update_file_map.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: stunnel.conf
docs/superpowers/plans/: 2026-06-10-kraken-futures-feed.md
docs/superpowers/specs/: 2026-06-10-kraken-futures-feed-design.md
scripts/: csv2krkr.py  live.sh  replay.sh
src/: engine.rs  lib.rs  main.rs  model.rs  models.rs  multiThreaded.rs
src/testing_scripts/: mod.rs  multi_threaded.rs  one_threaded.rs
