[package]
name = "rust-hft-software"
version = "0.1.2"
edition = "2024"


[[bin]]
name = "trading-engine"
path = "src/main.rs"

[[bin]]
name = "bench-one-threaded"
path = "src/testing_scripts/one_threaded.rs"

[[bin]]
name = "bench-multi-threaded"
path = "src/testing_scripts/multi_threaded.rs"

[dependencies]

[features]
testing = []  # Enable to compile testing_scripts module

# Workaround for a rustc ICE ("computing target features for inline asm of
# engine::trading_strategy") that only triggers in the incremental TEST profile
# build of the SIMD signal. Release builds (CI's gate) and `cargo test --release`
# are unaffected; disabling incremental for the test profile lets plain
# `cargo test` run. Tracked as a compiler bug, not a logic issue.
[profile.test]
incremental = false

